# LoanSphere

./: .env.example  .gitignore  .replit  =4.8.0  DataMindRoadmap.md  Dockerfile  ENTITY_MODEL.md  REFACTORING_SUMMARY.md  claude.md  datamind.md  drizzle.config.ts  loan_boarding.db  nixpacks.toml  package-lock.json  package.json  plan.md  pyproject.toml  railway.json  readme.md  replit.md  requirements.md  requirements.txt  simple_sse_fix.py  start_python_app.sh  vite.config.ts
.claude/: settings.local.json
attached_assets/: 01. ideas_v3_1756101452856.md  02. high_level_system_design_v3_1756101402934.md  03. low_level_impl_plan_v3_1756101402935.md  041. commitment_1756101402935.json  042. purchaseAdvice_1756101402936.json  043. loan-data_1756041797771_1756101402937.json  044. documents_1756041797770_1756101402938.json  045. loan-tracking_1756041797771_1756101402939.json  logs.txt
client/src/: App.tsx  index.css
docs/: DATAMIND.md
server/: commitment-storage.ts  database-config.ts  database.py  index-fast.ts  index.ts  loan_boarding.db  main.py  models.py  proxy.ts  replitAuth.ts  requirements.txt  routes.ts  simple-staging.ts  storage.ts
server/agents/: document_agent.py  planner_agent.py  tool_agent.py  verifier_agent.py
server/config/: agents.yaml
server/data/: commitments.json  documents_metadata.json  exceptions.json  loan_data.json  loan_sphere.json  loan_tracking.json  purchase_advice.json  stage.json
server/fixtures/: sample-data-generator.ts  staging-api.ts
server/routers/: agent.py  agents.py  ai_agent.py  auth.py  graph.py  (+14 more)
shared/: schema.ts
(+99 files in other folders)
